kubernetes/mariadb/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: database
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
      annotations:
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
        use-metadata.version-checker.io/mariadb: "true"
        pin-major.version-checker.io/mariadb: "10"
        pin-minor.version-checker.io/mariadb: "6"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1337
        runAsGroup: 1337
        fsGroup: 2000
      containers:
        - image: mariadb:10.6.5
          imagePullPolicy: IfNotPresent
          name: mariadb
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
          resources:
            requests:
              memory: "750M"
              cpu: "350m"
            limits:
              memory: "1G"
              cpu: "1500m"
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
            - name: mariadb-config
              mountPath: /etc/mysql/my.cnf
              subPath: my.cnf
      volumes:
        - name: mariadb-config
          configMap:
            name: mariadb-config
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
