kubernetes/mariadb/mariadb-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: database
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  serviceName: mariadb
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: mariadb
      annotations:
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
        use-metadata.version-checker.io/mariadb: "true"
        pin-major.version-checker.io/mariadb: "10"
        pin-minor.version-checker.io/mariadb: "6"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1337
        runAsGroup: 1337
        fsGroup: 2000
      serviceAccountName: mariadb-sa
      containers:
        - image: mariadb:10.6.5
          imagePullPolicy: IfNotPresent
          name: mariadb
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - all
          resources:
            requests:
              memory: "750M"
              cpu: "250m"
            limits:
              memory: "1G"
              cpu: "1500m"
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-pvc
              mountPath: /var/lib/mysql
            - name: mariadb-config
              mountPath: /etc/mysql/my.cnf
              subPath: my.cnf
          livenessProbe:
            exec:
              command: ["mysqladmin", "ping"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
      volumes:
        - name: mariadb-config
          configMap:
            name: mariadb-config
        - name: mariadb-pvc
          persistentVolumeClaim:
            claimName: mariadb-pvc
